--- a/style.css
+++ b/style.css
@@ -59,16 +59,25 @@
         background-size: cover;
         padding: 20px 0px;
         position: relative;
-        opacity: 0.5;
+        opacity: 0.3;
     }
     .memberbgimage{
-      background: url("background images/gi-dle-dumdi-dumdi.jpg") no-repeat center;
+      background: url("background images/memberbgimage.jpg") no-repeat center;
       height: 900px;
+      background-size: cover;
+      position: relative;
+      opacity: 0.3;
+  }
+
+    .merchbgimage{
+      background: url("background images/merchbg.jpg") no-repeat center;
+      height: 1200px;
       background-size: cover;
       padding: 20px 0;
       position: relative;
-      opacity: 0.5;
-  }
+      opacity: 0.3;
+
+    }
     .primary-title{
       font-family: 'Times New Roman', Times, serif;
       font-size: 20px;
@@ -205,23 +214,100 @@
 
       footer{
         background-color: grey;
+=
       }
       footer p{
         text-align: center;
-        font-size: 20px;
+        font-size: 30px;
+        margin:0;
+        font-family:'Open Sans Condensed', sans-serif;
+      }
+      .footerhead{
+        text-align: center;
+        font-size: 25px;
         margin:0;
       }
       .fbicon{
-        width: 60px;
-        margin-right: 15px;
+        width: 100px;
+        margin-right: 10px;
       }
       .instagramicon{
-        width: 60px;
+        width: 109px;
+        margin-bottom: 8px;
+        margin-right: 23px;
+
       }
       .twittericon{
-        width: 60px;
-        margin-left: 15px;
+        width: 72px;
+        margin-bottom: 13px;
+        
       }
       .icons{
         text-align: center;
+        margin-right: 20px;
       }
+
+      .dot {
+        height: 5px;
+        width: 5px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        margin-bottom: 5px;
+        margin-left: 5px;
+      }
+
+      /* Merch Store */
+      .item {
+        position: relative;
+        width: 100%;
+        max-width: 400px;
+        text-align: center;
+        margin-top:5% ;
+      }
+      
+      .item img {
+        width: 80%;
+        height: auto;
+      }
+      
+      .item .btn {
+        position: absolute;
+        top: 93%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        background-color: #555;
+        color: white;
+        font-size: 16px;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        text-align: center;
+        opacity: 0.4;
+      }
+      
+      .item .btn:hover {
+        background-color: green;
+        opacity: 1;
+      }
+
+      .row_album{
+        display: flex;
+        justify-content: center;
+
+    }
+
+      .row2_album{
+        display: flex;
+        justify-content: center;
+        padding: 20px 10px
+  }
+
+      .row2container{
+        position: absolute;
+        top: 10%;
+        left: 12%;
+      }
+  /* end of Merch Store */
