--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
         padding: 14px 20px;
         text-decoration: none;
         font-size: 18px;
-        
     }
     
     .topnav a:hover {
@@ -54,7 +53,7 @@
     }
 
     .bgimage{
-        background: url("background images/bgimage.jpg") no-repeat center;
+        background: url("images/background images/bgimage.jpg") no-repeat center;
         height: 900px;
         background-size: cover;
         padding: 20px 0px;
@@ -62,15 +61,15 @@
         opacity: 0.3;
     }
     .memberbgimage{
-      background: url("background images/memberbgimage.jpg") no-repeat center;
+      background: url("images/background images/memberbgimage.jpg") no-repeat center;
       height: 900px;
       background-size: cover;
       position: relative;
       opacity: 0.3;
-  }
+    }
 
     .merchbgimage{
-      background: url("background images/merchbg.jpg") no-repeat center;
+      background: url("images/background images/merchbg.jpg") no-repeat center;
       height: 1200px;
       background-size: cover;
       padding: 20px 0;
@@ -98,216 +97,220 @@
       width:700px; 
       height:385px;
     }
+
+    .musicvideo p{
+      font-family:'Open Sans Condensed', sans-serif;
+
+    }
+
     /*end of home page */
 
     /*first 3 members */
     .container {
         position: relative;
         width: 25%;
-      }
+    }
       
-      .image {
-        display: block;
-        width: 100%;
-        height: auto;
-      }
+    .image {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
       
-      .overlay {
-        position: absolute;
-        opacity: 0;
-        bottom: 100%;
-        overflow: hidden;
-        width: 100%;
-        transition: .5s ease;
-      }
+    .overlay {
+      position: absolute;
+      opacity: 0;
+      bottom: 100%;
+      overflow: hidden;
+      width: 100%;
+      transition: .5s ease;
+    }
       
-      .container:hover .image {
-        opacity: 0.3;
-      }
+    .container:hover .image {
+      opacity: 0.3;
+    }
       
-      .container:hover .overlay {
-        bottom: 0;
-        height: 100%;
-        opacity: 2;
-      }
+    .container:hover .overlay {
+      bottom: 0;
+      height: 100%;
+      opacity: 2;
+    }
       
-      .text {
-        color: white;
-        font-size: 17px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        background-color: darkslateblue;
-        width: 330px;
-        
-      }
-      /* end of first 3 members */
+    .text {
+      color: white;
+      font-size: 17px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      text-align: center;
+      background-color: darkslateblue;
+      width: 330px;
+    }
+    /* end of first 3 members */
 
-      /* next 3 members */
-      .container2 {
-        position: relative;
-        width: 25%;
-      }
+    /* next 3 members */
+    .container2 {
+      position: relative;
+      width: 25%;
+    }
       
-      .image2 {
-        display: block;
-        width: 100%;
-        height: auto;
-      }
+    .image2 {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+    
+    .overlay2 {
+      position: absolute;
+      opacity: 0;
+      overflow: hidden;
+      width: 100%;
+      height: 0;
+      transition: .5s ease;
+    }
       
-      .overlay2 {
-        position: absolute;
-        opacity: 0;
-        overflow: hidden;
-        width: 100%;
-        height: 0;
-        transition: .5s ease;
-      }
+    .container2:hover .image2 {
+      opacity: 0.3;
+    }
+    .container2:hover .overlay2 {
+      bottom: 0;
+      height: 100%;
+      opacity: 2;
+    }
       
-      .container2:hover .image2 {
-        opacity: 0.3;
-      }
-      .container2:hover .overlay2 {
-        bottom: 0;
-        height: 100%;
-        opacity: 2;
-      }
-      
-      .text2 {
-        color: white;
-        font-size: 17px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        background-color: darkslateblue;
-        width: 330px;
-      }
-      /* end of last 3 members */
+    .text2 {
+      color: white;
+      font-size: 17px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      text-align: center;
+      background-color: darkslateblue;
+      width: 330px;
+    }
+    /* end of last 3 members */
 
-      .row{
-          display: flex;
-          justify-content: center;
-          margin-top:80px;
-          padding: 10px 10px
-      }
-      
-      .row2{
-          display: flex;
-          justify-content: center;
-          margin-bottom: 100px;
-          padding: 10px 10px
-      }
-
-      .rowcontainer{
-        position: absolute;
-        top: 5%;
-        left: 2%;
-      }
-
-      footer{
-        background-color: grey;
-=
-      }
-      footer p{
-        text-align: center;
-        font-size: 30px;
-        margin:0;
-        font-family:'Open Sans Condensed', sans-serif;
-      }
-      .footerhead{
-        text-align: center;
-        font-size: 25px;
-        margin:0;
-      }
-      .fbicon{
-        width: 100px;
-        margin-right: 10px;
-      }
-      .instagramicon{
-        width: 109px;
-        margin-bottom: 8px;
-        margin-right: 23px;
-
-      }
-      .twittericon{
-        width: 72px;
-        margin-bottom: 13px;
-        
-      }
-      .icons{
-        text-align: center;
-        margin-right: 20px;
-      }
-
-      .dot {
-        height: 5px;
-        width: 5px;
-        background-color: #bbb;
-        border-radius: 50%;
-        display: inline-block;
-        margin-bottom: 5px;
-        margin-left: 5px;
-      }
-
-      /* Merch Store */
-      .item {
-        position: relative;
-        width: 100%;
-        max-width: 400px;
-        text-align: center;
-        margin-top:5% ;
-      }
-      
-      .item img {
-        width: 80%;
-        height: auto;
-      }
-      
-      .item .btn {
-        position: absolute;
-        top: 93%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        background-color: #555;
-        color: white;
-        font-size: 16px;
-        padding: 10px 20px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-        text-align: center;
-        opacity: 0.4;
-      }
-      
-      .item .btn:hover {
-        background-color: green;
-        opacity: 1;
-      }
-
-      .row_album{
+    .row{
         display: flex;
         justify-content: center;
-
+        margin-top:80px;
+        padding: 10px 10px
+    }
+      
+    .row2{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 100px;
+        padding: 10px 10px
     }
 
-      .row2_album{
-        display: flex;
-        justify-content: center;
-        padding: 20px 10px
+    .rowcontainer{
+      position: absolute;
+      top: 5%;
+      left: 2%;
+    }
+
+    footer{
+      background-color: grey;
+    }
+    footer p{
+      text-align: center;
+      font-size: 30px;
+      margin:0;
+      font-family:'Open Sans Condensed', sans-serif;
+    }
+    .footerhead{
+      text-align: center;
+      font-size: 25px;
+      margin:0;
+    }
+    .fbicon{
+      width: 100px;
+      margin-right: 10px;
+    }
+    .instagramicon{
+      width: 109px;
+      margin-bottom: 8px;
+      margin-right: 23px;
+
+    }
+    .twittericon{
+      width: 72px;
+      margin-bottom: 13px;
+      
+    }
+    .icons{
+      text-align: center;
+      margin-right: 20px;
+    }
+
+    .dot {
+      height: 5px;
+      width: 5px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      margin-bottom: 5px;
+      margin-left: 5px;
+    }
+
+    /* Merch Store */
+    .item {
+      position: relative;
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+      margin-top:5% ;
+    }
+      
+    .item img {
+      width: 80%;
+      height: auto;
+    }
+    
+    .item .btn {
+      position: absolute;
+      top: 93%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      background-color: #555;
+      color: white;
+      font-size: 16px;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      text-align: center;
+      opacity: 0.4;
+    }
+      
+    .item .btn:hover {
+      background-color: green;
+      opacity: 1;
+    }
+
+    .row_album{
+      display: flex;
+      justify-content: center;
+
   }
 
-      .row2container{
-        position: absolute;
-        top: 10%;
-        left: 12%;
-      }
-  /* end of Merch Store */
+    .row2_album{
+      display: flex;
+      justify-content: center;
+      padding: 20px 10px
+}
+
+    .row2container{
+      position: absolute;
+      top: 10%;
+      left: 12%;
+    }
+/* end of Merch Store */
